--- a/LDA/LDA_Stock_Returns.ipynb
+++ b/LDA/LDA_Stock_Returns.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as pp\n",
+    "from pathlib import Path\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
@@ -31,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_path = '/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data/SP500'\n",
+    "my_path = Path('/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data/SP500')\n",
     "os.chdir(my_path)\n",
     "fns = os.listdir(my_path)\n",
     "\n",
@@ -42,7 +43,7 @@
     "    fn_first = fn.split('.txt')[0]\n",
     "    ticker = fn_first.split('_')[0]\n",
     "    sector = fn_first.split('_')[1]\n",
-    "    f = open(fn, 'r')\n",
+    "    f = open(fn, 'r', encoding=\"utf8\")\n",
     "    f_text = f.read()\n",
     "    f.close()\n",
     "    \n",
@@ -64,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data')\n",
-    "f = open(\"bds_1.txt\", \"r\")\n",
+    "os.chdir(Path('/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data'))\n",
+    "f = open(\"bds_1.txt\", \"r\", encoding=\"utf8\")\n",
     "f_lines = f.readlines()\n",
     "f.close()\n",
     "\n",
@@ -99,7 +100,7 @@
     "end_d = np.datetime64('2020-01-01')\n",
     "business_ds = pd.date_range(start_d, end_d, freq='B')\n",
     "\n",
-    "my_path = '/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data/MarketData'\n",
+    "my_path = Path('/home/lawrence/Personal/Masters/COMP0087_ Natural_Language_Processing/Project/Data/MarketData')\n",
     "os.chdir(my_path)\n",
     "price_data = pd.read_csv('Price.csv')\n",
     "\n",
