Load models for qualitative analysis

--- a/aaron/NVDM_Experiments.ipynb
+++ b/aaron/NVDM_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,18 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,11 +850,356 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2 Full Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "\n",
+    "MODELSAVE_PATH = \"./modelsaves\"\n",
+    "\n",
+    "models_k = dict()\n",
+    "\n",
+    "for filename in os.listdir(MODELSAVE_PATH):\n",
+    "    \n",
+    "    num_topics = filename.split(\"_\")[1][1:]\n",
+    "    num_topics = int(num_topics)\n",
+    "    \n",
+    "    model = nvdm.NVDM(len(vocab), hidden_size, num_topics, 1, device)\n",
+    "    model.load_state_dict(torch.load(os.path.join(MODELSAVE_PATH, filename)))\n",
+    "    model.eval()\n",
+    "    models_k[num_topics] = model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analysis(model):\n",
+    "    PORTER_STEMMER = PorterStemmer()\n",
+    "    # Set of words used in the original paper\n",
+    "    candidates = [\"weapons\", \"medical\", \"companies\", \"define\", \"israel\", \"book\"]\n",
+    "    \n",
+    "    # Extract the vocab-topic matrix (known as R in the paper).\n",
+    "    # It has dimensions |V| x K: vocab size x number of topics\n",
+    "    decoder = model.decoder[0]\n",
+    "    weights = decoder.weight.data.detach().clone()\n",
+    "\n",
+    "    for candidate in candidates:\n",
+    "        test_word = PORTER_STEMMER.stem(candidate)\n",
+    "        idx = vocab.stoi[test_word]\n",
+    "        print(test_word, idx)\n",
+    "\n",
+    "        # Show top 10 most similar (based on cosine distance)\n",
+    "        sims = F.cosine_similarity(weights[idx].unsqueeze(0), weights)\n",
+    "        sim_vals, sim_idxs = torch.topk(sims, 15)\n",
+    "\n",
+    "        # Show ith nearest word and its score.\n",
+    "        for i, v in zip(sim_idxs, sim_vals):\n",
+    "            print(f\"{vocab.itos[i]}\\t{v.item()}\")\n",
+    "\n",
+    "        print(\"-----------\")\n",
+    "    \n",
+    "    V, K = weights.size()\n",
+    "    for i in range(K):\n",
+    "        print(f\"Topic {i+1}\")\n",
+    "        vals, idxs = torch.topk(torch.abs(weights[:, i]), 30)\n",
+    "        for i, v in zip(idxs, vals):\n",
+    "            print(f\"{vocab.itos[i]}\\t{v.item()}\")\n",
+    "        print(\"------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weapon 6165\n",
+      "weapon\t1.0\n",
+      "headset\t0.9978045225143433\n",
+      "diod\t0.9977712631225586\n",
+      "fpga\t0.9975942969322205\n",
+      "upcom\t0.9969573020935059\n",
+      "microwav\t0.9967873692512512\n",
+      "ergonom\t0.9967591762542725\n",
+      "microdisplay\t0.9961642026901245\n",
+      "ubiquitor\t0.995185375213623\n",
+      "microprocessor\t0.9949306845664978\n",
+      "avx\t0.9949303269386292\n",
+      "waveguid\t0.9942797422409058\n",
+      "ip\t0.9927443861961365\n",
+      "sonar\t0.99266117811203\n",
+      "labview\t0.9923931956291199\n",
+      "-----------\n",
+      "medic 235\n",
+      "medic\t1.0\n",
+      "univers\t0.9583813548088074\n",
+      "devic\t0.9522219300270081\n",
+      "rapid\t0.9455239176750183\n",
+      "inc\t0.9404319524765015\n",
+      "care\t0.9309444427490234\n",
+      "hospit\t0.9130054712295532\n",
+      "promot\t0.9118832349777222\n",
+      "behavior\t0.9088248014450073\n",
+      "version\t0.9068402647972107\n",
+      "healthcar\t0.8899935483932495\n",
+      "rapidli\t0.8878748416900635\n",
+      "foundat\t0.8871327042579651\n",
+      "still\t0.8849836587905884\n",
+      "patient\t0.8839438557624817\n",
+      "-----------\n",
+      "compani 3\n",
+      "compani\t1.0\n",
+      "entir\t0.9895139932632446\n",
+      "corpor\t0.9875907897949219\n",
+      "maintain\t0.9875349998474121\n",
+      "collect\t0.9873965382575989\n",
+      "adopt\t0.9861133694648743\n",
+      "As\t0.9843692183494568\n",
+      "influenc\t0.9832512140274048\n",
+      "abil\t0.9816815853118896\n",
+      "growth\t0.9792988300323486\n",
+      "offic\t0.9781963229179382\n",
+      "sourc\t0.9776283502578735\n",
+      "meet\t0.9769752025604248\n",
+      "acquir\t0.9763994812965393\n",
+      "factor\t0.9759693741798401\n",
+      "-----------\n",
+      "defin 531\n",
+      "defin\t1.0\n",
+      "made\t0.9977492690086365\n",
+      "except\t0.9961791634559631\n",
+      "determin\t0.9945410490036011\n",
+      "such\t0.992107093334198\n",
+      "taken\t0.9884191155433655\n",
+      "pay\t0.9858917593955994\n",
+      "provis\t0.9858624935150146\n",
+      "manner\t0.9854063391685486\n",
+      "prior\t0.9840171933174133\n",
+      "circumst\t0.9835441708564758\n",
+      "limit\t0.980140745639801\n",
+      "issu\t0.9786840081214905\n",
+      "would\t0.9785784482955933\n",
+      "upon\t0.9785692691802979\n",
+      "-----------\n",
+      "israel 1946\n",
+      "israel\t1.0\n",
+      "batch\t0.9958117604255676\n",
+      "sequenc\t0.9955333471298218\n",
+      "dispers\t0.9948574304580688\n",
+      "nucleic\t0.9932422041893005\n",
+      "viru\t0.9870507717132568\n",
+      "viral\t0.9852288365364075\n",
+      "greatli\t0.9851056933403015\n",
+      "dna\t0.9806572794914246\n",
+      "rna\t0.9804084300994873\n",
+      "recombin\t0.97967928647995\n",
+      "pathogen\t0.978667676448822\n",
+      "resist\t0.9775886535644531\n",
+      "protein\t0.9758047461509705\n",
+      "bayer\t0.974865734577179\n",
+      "-----------\n",
+      "book 1195\n",
+      "book\t1.0\n",
+      "account\t0.991607666015625\n",
+      "consider\t0.9914016127586365\n",
+      "stock\t0.989940345287323\n",
+      "fee\t0.9898459911346436\n",
+      "contractu\t0.9864426255226135\n",
+      "such\t0.9845533967018127\n",
+      "manner\t0.9835518002510071\n",
+      "aggreg\t0.9834418296813965\n",
+      "extent\t0.9810120463371277\n",
+      "common\t0.9788485169410706\n",
+      "would\t0.9781138896942139\n",
+      "made\t0.9774724245071411\n",
+      "purpos\t0.9757786393165588\n",
+      "taken\t0.9754866361618042\n",
+      "-----------\n",
+      "Topic 1\n",
+      "venat\t2.7896182537078857\n",
+      "sdwa\t2.7078487873077393\n",
+      "feedstock\t2.6734540462493896\n",
+      "downhol\t2.6715829372406006\n",
+      "undril\t2.5957937240600586\n",
+      "slag\t2.5907938480377197\n",
+      "slurri\t2.590029716491699\n",
+      "mbbl\t2.58734393119812\n",
+      "migratori\t2.5851709842681885\n",
+      "wotu\t2.556809186935425\n",
+      "tsca\t2.5487561225891113\n",
+      "butan\t2.5451362133026123\n",
+      "biotherapeut\t2.5424067974090576\n",
+      "endanger\t2.5257420539855957\n",
+      "epoxi\t2.523458242416382\n",
+      "reprogram\t2.4979639053344727\n",
+      "mmbbl\t2.485645055770874\n",
+      "geoscienc\t2.4803409576416016\n",
+      "elicit\t2.461041212081909\n",
+      "nga\t2.4599313735961914\n",
+      "frac\t2.452641487121582\n",
+      "wellbor\t2.4520556926727295\n",
+      "brine\t2.450670003890991\n",
+      "wellsit\t2.444349527359009\n",
+      "chlorid\t2.438411235809326\n",
+      "amin\t2.433640241622925\n",
+      "mboe\t2.422307014465332\n",
+      "stratigraph\t2.4218249320983887\n",
+      "nucleotid\t2.420255184173584\n",
+      "recomplet\t2.4192049503326416\n",
+      "------------\n",
+      "Topic 2\n",
+      "fcc\t2.6318395137786865\n",
+      "carriag\t2.6302855014801025\n",
+      "retransmiss\t2.6273913383483887\n",
+      "broadcast\t2.4732656478881836\n",
+      "marriott\t2.4230103492736816\n",
+      "dma\t2.422990083694458\n",
+      "mbp\t2.410048007965088\n",
+      "viewer\t2.3972957134246826\n",
+      "usf\t2.3905603885650635\n",
+      "quadrenni\t2.389950752258301\n",
+      "comcast\t2.372241258621216\n",
+      "mvpd\t2.3557920455932617\n",
+      "modem\t2.3481874465942383\n",
+      "uhf\t2.318263053894043\n",
+      "mhz\t2.315274238586426\n",
+      "nbc\t2.305485486984253\n",
+      "broadband\t2.3001365661621094\n",
+      "voip\t2.2958476543426514\n",
+      "televis\t2.290736675262451\n",
+      "terrestri\t2.268950939178467\n",
+      "revpar\t2.2686853408813477\n",
+      "ott\t2.2632460594177246\n",
+      "voi\t2.2565982341766357\n",
+      "hoa\t2.2551968097686768\n",
+      "ovd\t2.254793405532837\n",
+      "itu\t2.253239393234253\n",
+      "bandwidth\t2.2429466247558594\n",
+      "lte\t2.2389206886291504\n",
+      "inmarsat\t2.2375454902648926\n",
+      "hotel\t2.236891031265259\n",
+      "------------\n",
+      "Topic 3\n",
+      "cellecti\t2.519272565841675\n",
+      "faculti\t2.5192477703094482\n",
+      "insever\t2.5120906829833984\n",
+      "smpc\t2.5007402896881104\n",
+      "docetaxel\t2.4967591762542725\n",
+      "postsecondari\t2.4870493412017822\n",
+      "pretens\t2.4657034873962402\n",
+      "optometrist\t2.442056655883789\n",
+      "etasu\t2.391770601272583\n",
+      "14e\t2.381681442260742\n",
+      "asco\t2.3655943870544434\n",
+      "recist\t2.3637359142303467\n",
+      "dimer\t2.3566761016845703\n",
+      "tricar\t2.3555214405059814\n",
+      "nccn\t2.35017466545105\n",
+      "monocyt\t2.322160005569458\n",
+      "monogen\t2.3152856826782227\n",
+      "aminotransferas\t2.3081374168395996\n",
+      "indol\t2.3074288368225098\n",
+      "qidp\t2.2979254722595215\n",
+      "mcrpc\t2.289175510406494\n",
+      "healthlynk\t2.288733959197998\n",
+      "metastasi\t2.2764830589294434\n",
+      "rld\t2.270219326019287\n",
+      "hmo\t2.2695705890655518\n",
+      "enrolle\t2.2674872875213623\n",
+      "flexpath\t2.264474630355835\n",
+      "adventiti\t2.2614712715148926\n",
+      "imm\t2.259613513946533\n",
+      "neutropenia\t2.256669759750366\n",
+      "------------\n",
+      "Topic 4\n",
+      "endovascular\t2.584852695465088\n",
+      "cardiologist\t2.3953299522399902\n",
+      "fixat\t2.394341230392456\n",
+      "interbodi\t2.374715566635132\n",
+      "cpt\t2.360334634780884\n",
+      "aneurysm\t2.3364412784576416\n",
+      "mdsap\t2.3308358192443848\n",
+      "allograft\t2.328652858734131\n",
+      "graft\t2.318962812423706\n",
+      "amput\t2.30810809135437\n",
+      "trauma\t2.284390926361084\n",
+      "anatomi\t2.2620387077331543\n",
+      "ablat\t2.261657476425171\n",
+      "femor\t2.241537570953369\n",
+      "ide\t2.2399916648864746\n",
+      "handpiec\t2.205014705657959\n",
+      "revascular\t2.1986899375915527\n",
+      "atherectomi\t2.1978940963745117\n",
+      "exhibitor\t2.194091796875\n",
+      "sutur\t2.1834499835968018\n",
+      "VR\t2.1735150814056396\n",
+      "amniot\t2.1632843017578125\n",
+      "artifact\t2.1570756435394287\n",
+      "surgeon\t2.1559810638427734\n",
+      "bioresorb\t2.1527817249298096\n",
+      "spine\t2.150890350341797\n",
+      "guidewir\t2.145205020904541\n",
+      "aorta\t2.13256573677063\n",
+      "stent\t2.1302683353424072\n",
+      "poker\t2.107814311981201\n",
+      "------------\n",
+      "Topic 5\n",
+      "papuc\t2.230210781097412\n",
+      "dcpsc\t2.225950002670288\n",
+      "afudc\t2.1733627319335938\n",
+      "njbpu\t2.167980194091797\n",
+      "feja\t2.1400747299194336\n",
+      "opeb\t2.1335346698760986\n",
+      "retailcustom\t2.1190249919891357\n",
+      "phisco\t2.112922191619873\n",
+      "836\t2.109224557876587\n",
+      "todecemb\t2.107210159301758\n",
+      "tomarch\t2.098646640777588\n",
+      "eddyston\t2.0859222412109375\n",
+      "eima\t2.071605920791626\n",
+      "carfr\t2.071305990219116\n",
+      "zec\t2.0678296089172363\n",
+      "mystic\t2.0665698051452637\n",
+      "eroa\t2.062748908996582\n",
+      "2046\t2.049612283706665\n",
+      "totalretailcustom\t2.049318313598633\n",
+      "kV\t2.0438477993011475\n",
+      "dpsc\t2.041121006011963\n",
+      "gruver\t2.0328025817871094\n",
+      "794\t2.029351234436035\n",
+      "cfd\t2.012132167816162\n",
+      "mandatorili\t2.0118072032928467\n",
+      "avsr\t2.0061299800872803\n",
+      "546\t2.0012292861938477\n",
+      "misfeas\t2.000930070877075\n",
+      "ofcustom\t1.990805745124817\n",
+      "mapp\t1.9897831678390503\n",
+      "------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "analysis(models_k[5])"
+   ]
   }
  ],
  "metadata": {
