--- a/NLP Project Demo.ipynb
+++ b/NLP Project Demo.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "id": "dense-serial",
    "metadata": {},
    "outputs": [],
@@ -25,18 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "id": "sound-curtis",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.spatial.distance import cdist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "documentary-county",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "standard-courage",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 5,
    "id": "executed-syndicate",
    "metadata": {},
    "outputs": [],
@@ -69,19 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "id": "proprietary-petersburg",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "id": "close-vegetable",
    "metadata": {},
    "outputs": [],
@@ -162,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 125,
    "id": "elementary-texture",
    "metadata": {},
    "outputs": [],
@@ -180,7 +172,13 @@
     "        raise NotImplementedError()\n",
     "    \n",
     "    def transform(self, X):\n",
-    "        \"\"\" Apply model to new data. \"\"\"\n",
+    "        \"\"\" Apply model to new data.\n",
+    "        \n",
+    "        Should output a topic-document matrix,\n",
+    "        where each element is a score indicating how likely the document\n",
+    "        should be assigned to the topic.\n",
+    "        For sklearn LDA, transform() does this by default.\n",
+    "        \"\"\"\n",
     "        raise NotImplementedError()\n",
     "    \n",
     "    @property\n",
@@ -210,6 +208,7 @@
     "        self.model.fit(X)\n",
     "\n",
     "    def transform(self, X):\n",
+    "        \"\"\" Returns a topic-document matrix of distances per cluster. \"\"\"\n",
     "        return self.model.transform(X)\n",
     "    \n",
     "    @property\n",
@@ -235,6 +234,7 @@
     "        self.model.fit(X)\n",
     "    \n",
     "    def transform(self, X):\n",
+    "        \"\"\" Returns a topic-document matrix of probabilities. \"\"\"\n",
     "        return self.model.transform(X)\n",
     "    \n",
     "    @property\n",
@@ -261,20 +261,34 @@
     "        self.model = NVDM(vocab_size, hidden_size, num_topics, 1, \"cpu\")\n",
     "        self.model.load_state_dict(torch.load(model_path, map_location=\"cpu\"))\n",
     "        self.model.eval()\n",
+    "        \n",
+    "        decoder = self.model.decoder[0]\n",
+    "        weights = decoder.weight.data.detach().clone().cpu().numpy()\n",
+    "        self.topic_vocab = weights.T\n",
     "    \n",
     "    def fit(self, X):\n",
     "        \"\"\" We don't train the model here because it takes too long. \"\"\"\n",
     "        pass\n",
     "    \n",
     "    def transform(self, X):\n",
-    "        pass\n",
+    "        \"\"\" Output a topic-document matrix. \"\"\"\n",
+    "        n_doc, n_vocab = X.shape\n",
+    "        n_topic = self.topic_vocab.shape[0]\n",
+    "        \n",
+    "        # shape (n_doc, n_topic)\n",
+    "        # Score of each document for a topic is the average scores\n",
+    "        # of the document's words in the topic.\n",
+    "        topic_doc = X @ self.topic_vocab.T\n",
+    "        \n",
+    "        # Optionally, normalize by document length.\n",
+    "        topic_doc = topic_doc / X.sum(axis=1, keepdims=True)\n",
+    "        \n",
+    "        return topic_doc\n",
     "    \n",
     "    @property\n",
     "    def topic_vocab_matrix(self):\n",
     "        \"\"\" Returns the learned semantic embeddings of each word. \"\"\"\n",
-    "        decoder = self.model.decoder[0]\n",
-    "        weights = decoder.weight.data.detach().clone().cpu().numpy()\n",
-    "        return weights.T"
+    "        return self.topic_vocab"
    ]
   },
   {
@@ -290,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "id": "brilliant-lunch",
    "metadata": {},
    "outputs": [],
@@ -383,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "orange-workstation",
    "metadata": {},
    "outputs": [],
@@ -466,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "sorted-penalty",
    "metadata": {},
    "outputs": [
@@ -474,8 +488,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 16s, sys: 71.9 ms, total: 1min 16s\n",
-      "Wall time: 1min 16s\n"
+      "CPU times: user 1min 2s, sys: 395 ms, total: 1min 2s\n",
+      "Wall time: 1min 3s\n"
      ]
     }
    ],
@@ -489,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 12,
    "id": "passing-wells",
    "metadata": {},
    "outputs": [
@@ -499,7 +513,7 @@
        "CountVectorizer(max_df=0.95, max_features=4000, min_df=2)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,12 +535,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 80,
    "id": "working-sheriff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_sp500 = tf_vectorizer.transform(sp500_bds)"
+    "X_sp500 = tf_vectorizer.transform(sp500_bds).toarray()"
    ]
   },
   {
@@ -539,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 44,
    "id": "civil-uncle",
    "metadata": {},
    "outputs": [],
@@ -550,7 +564,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 61,
+   "id": "ordinary-brother",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = kmeans.transform(X_sp500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "infinite-penetration",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group the companies by the most likely topic assignment.\n",
+    "# Argmin, because K-Means.transform() outputs distances of companies to each cluster,\n",
+    "# so we want the topic with the smallest distance.\n",
+    "# (in contrast with LDA, which outputs topic probabilities, so we want argmax)\n",
+    "topic_per_company = preds.argmin(axis=1)\n",
+    "groups = dict((i, []) for i in range(len(topic_per_company)))\n",
+    "for company_idx in range(len(topic_per_company)):\n",
+    "    topic = topic_per_company[company_idx]\n",
+    "    groups[topic].append(company_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "enclosed-reynolds",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('COF', 'Financials'),\n",
+       " ('MTB', 'Financials'),\n",
+       " ('BRK.B', 'Financials'),\n",
+       " ('SIVB', 'Financials'),\n",
+       " ('PFG', 'Financials'),\n",
+       " ('AIG', 'Financials'),\n",
+       " ('AMP', 'Financials'),\n",
+       " ('CFG', 'Financials'),\n",
+       " ('CINF', 'Financials'),\n",
+       " ('STT', 'Financials'),\n",
+       " ('USB', 'Financials'),\n",
+       " ('RE', 'Financials'),\n",
+       " ('CMA', 'Financials'),\n",
+       " ('NTRS', 'Financials'),\n",
+       " ('BEN', 'Financials'),\n",
+       " ('PRU', 'Financials'),\n",
+       " ('SCHW', 'Financials'),\n",
+       " ('AIZ', 'Financials'),\n",
+       " ('WU', 'Information Technology'),\n",
+       " ('TRV', 'Financials'),\n",
+       " ('KEY', 'Financials'),\n",
+       " ('RF', 'Financials'),\n",
+       " ('HBAN', 'Financials'),\n",
+       " ('SYF', 'Financials'),\n",
+       " ('RJF', 'Financials'),\n",
+       " ('CB', 'Financials'),\n",
+       " ('ALL', 'Financials'),\n",
+       " ('WELL', 'Real Estate'),\n",
+       " ('GS', 'Financials'),\n",
+       " ('ZION', 'Financials'),\n",
+       " ('PNC', 'Financials'),\n",
+       " ('UNM', 'Financials'),\n",
+       " ('MS', 'Financials'),\n",
+       " ('CBOE', 'Financials'),\n",
+       " ('AXP', 'Financials'),\n",
+       " ('O', 'Real Estate'),\n",
+       " ('BLK', 'Financials'),\n",
+       " ('C', 'Financials'),\n",
+       " ('LNC', 'Financials'),\n",
+       " ('MET', 'Financials'),\n",
+       " ('DFS', 'Financials'),\n",
+       " ('WRB', 'Financials'),\n",
+       " ('FITB', 'Financials'),\n",
+       " ('TFC', 'Financials'),\n",
+       " ('HIG', 'Financials')]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the tickers for an example group\n",
+    "# Compare them to their actual industry sector\n",
+    "[(sp500_tickers[i], sp500_sectors[i]) for i in groups[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "refined-origin",
    "metadata": {},
    "outputs": [
@@ -558,18 +667,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-15.161944975077024\n"
+      "-15.161944975077024\n",
+      " "
      ]
     }
    ],
    "source": [
-    "kmeans_topic_coherence = topic_coherence(kmeans.topic_vocab_matrix, 10, umass_score(X_sp500.todense()))\n",
+    "kmeans_topic_coherence = topic_coherence(kmeans.topic_vocab_matrix, 10, umass_score(X_sp500))\n",
     "print(np.median(kmeans_topic_coherence))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 48,
    "id": "included-gross",
    "metadata": {},
    "outputs": [
@@ -600,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 98,
    "id": "practical-samba",
    "metadata": {},
    "outputs": [],
@@ -611,7 +721,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 99,
+   "id": "separate-worse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = lda.transform(X_sp500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "norwegian-elements",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(503,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group the companies by the most likely topic assignment.\n",
+    "# argmax because we want the topic with highest probability.\n",
+    "topic_per_company = preds.argmax(axis=1)\n",
+    "groups = dict((i, []) for i in range(len(topic_per_company)))\n",
+    "for company_idx in range(len(topic_per_company)):\n",
+    "    topic = topic_per_company[company_idx]\n",
+    "    groups[topic].append(company_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "plastic-renewal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('PFG', 'Financials'),\n",
+       " ('AIG', 'Financials'),\n",
+       " ('CINF', 'Financials'),\n",
+       " ('RE', 'Financials'),\n",
+       " ('PRU', 'Financials'),\n",
+       " ('AJG', 'Financials'),\n",
+       " ('AIZ', 'Financials'),\n",
+       " ('TRV', 'Financials'),\n",
+       " ('CB', 'Financials'),\n",
+       " ('ALL', 'Financials'),\n",
+       " ('AON', 'Financials'),\n",
+       " ('MMC', 'Financials'),\n",
+       " ('UNM', 'Financials'),\n",
+       " ('AFL', 'Financials'),\n",
+       " ('LNC', 'Financials'),\n",
+       " ('MET', 'Financials'),\n",
+       " ('PGR', 'Financials'),\n",
+       " ('GL', 'Financials'),\n",
+       " ('WRB', 'Financials'),\n",
+       " ('HIG', 'Financials')]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the tickers for an example group\n",
+    "# Compare them to their actual industry sector\n",
+    "[(sp500_tickers[i], sp500_sectors[i]) for i in groups[12]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "explicit-nature",
    "metadata": {},
    "outputs": [
@@ -619,13 +805,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-15.977739544275304\n"
+      "45.83544402053764\n"
      ]
     }
    ],
    "source": [
-    "lda_topic_coherence = topic_coherence(lda.topic_vocab_matrix, 10, umass_score(X_sp500.todense()))\n",
-    "print(np.median(lda_topic_coherence))"
+    "lda_topic_coherence = topic_coherence(lda.topic_vocab_matrix, 10, umass_score(X_sp500))\n",
+    "print(np.mean(lda_topic_coherence))"
    ]
   },
   {
@@ -661,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 126,
    "id": "harmful-variance",
    "metadata": {},
    "outputs": [],
@@ -671,7 +857,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 127,
+   "id": "chicken-relaxation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = nvdm.transform(X_sp500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "extraordinary-frost",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group the companies by the most likely topic assignment.\n",
+    "# Argmin, because K-Means.transform() outputs distances of companies to each cluster,\n",
+    "# so we want the topic with the smallest distance.\n",
+    "# (in contrast with LDA, which outputs topic probabilities, so we want argmax)\n",
+    "topic_per_company = preds.argmax(axis=1)\n",
+    "groups = dict((i, []) for i in range(len(topic_per_company)))\n",
+    "for company_idx in range(len(topic_per_company)):\n",
+    "    topic = topic_per_company[company_idx]\n",
+    "    groups[topic].append(company_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "careful-majority",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 18, 21, 26, 50, 61, 70, 81, 90, 94, 136, 179, 190, 210, 271, 286]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('AEE', 'Utilities'),\n",
+       " ('AAL', 'Industrials'),\n",
+       " ('NOC', 'Industrials'),\n",
+       " ('NSC', 'Industrials'),\n",
+       " ('SO', 'Utilities'),\n",
+       " ('SRE', 'Utilities'),\n",
+       " ('ES', 'Utilities'),\n",
+       " ('DLTR', 'Consumer Discretionary'),\n",
+       " ('LRCX', 'Information Technology'),\n",
+       " ('EXC', 'Utilities'),\n",
+       " ('MOS', 'Materials'),\n",
+       " ('PKG', 'Materials'),\n",
+       " ('ED', 'Utilities'),\n",
+       " ('XEL', 'Utilities'),\n",
+       " ('FE', 'Utilities'),\n",
+       " ('CMS', 'Utilities'),\n",
+       " ('PPL', 'Utilities'),\n",
+       " ('WEC', 'Utilities'),\n",
+       " ('LHX', 'Industrials'),\n",
+       " ('EVRG', 'Utilities'),\n",
+       " ('ATO', 'Utilities'),\n",
+       " ('GPC', 'Consumer Discretionary'),\n",
+       " ('MCHP', 'Information Technology'),\n",
+       " ('AZO', 'Consumer Discretionary'),\n",
+       " ('PEG', 'Utilities'),\n",
+       " ('CSX', 'Industrials'),\n",
+       " ('NUE', 'Materials'),\n",
+       " ('NRG', 'Utilities'),\n",
+       " ('SWKS', 'Information Technology'),\n",
+       " ('CNP', 'Utilities'),\n",
+       " ('NI', 'Utilities'),\n",
+       " ('D', 'Utilities'),\n",
+       " ('LNT', 'Utilities'),\n",
+       " ('ETR', 'Utilities'),\n",
+       " ('NEE', 'Utilities'),\n",
+       " ('HWM', 'Industrials'),\n",
+       " ('AES', 'Utilities'),\n",
+       " ('MPWR', 'Information Technology'),\n",
+       " ('DUK', 'Utilities'),\n",
+       " ('AEP', 'Utilities'),\n",
+       " ('PCAR', 'Industrials'),\n",
+       " ('DE', 'Industrials'),\n",
+       " ('FCX', 'Materials')]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the tickers for an example group\n",
+    "# Compare them to their actual industry sector\n",
+    "print([key for key, val in groups.items() if len(val) > 0])\n",
+    "[(sp500_tickers[i], sp500_sectors[i]) for i in groups[50]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "stylish-alexander",
    "metadata": {},
    "outputs": [
@@ -684,13 +971,13 @@
     }
    ],
    "source": [
-    "nvdm_topic_coherence = topic_coherence(nvdm.topic_vocab_matrix, 10, umass_score(X_sp500.todense()))\n",
-    "print(np.median(nvdm_topic_coherence))"
+    "nvdm_topic_coherence = topic_coherence(nvdm.topic_vocab_matrix, 10, umass_score(X_sp500))\n",
+    "print(np.mean(nvdm_topic_coherence))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 78,
    "id": "opened-stadium",
    "metadata": {},
    "outputs": [
@@ -719,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "delayed-resident",
+   "id": "coordinated-symphony",
    "metadata": {},
    "outputs": [],
    "source": []
