Add NVDMModel transform_encoder()

--- a/NLP Project Demo.ipynb
+++ b/NLP Project Demo.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "elementary-texture",
    "metadata": {},
    "outputs": [],
@@ -339,6 +339,17 @@
     "        # Optionally, normalize by document length.\n",
     "        topic_doc = topic_doc / X.sum(axis=1, keepdims=True)\n",
     "        \n",
+    "        return topic_doc\n",
+    "    \n",
+    "    def transform_encoder(self, X):\n",
+    "        \"\"\" Output a topic-document matrix using encoder latent output.\n",
+    "        \n",
+    "        Each document's representation is the Gaussian mean parameter vector\n",
+    "        output by the encoder.\n",
+    "        \"\"\"\n",
+    "        X = torch.tensor(X, dtype=int)\n",
+    "        _, mu, _ = self.model.encoder(X)\n",
+    "        topic_doc = mu.numpy()\n",
     "        return topic_doc\n",
     "    \n",
     "    @property\n",
